--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@entro314labs/remark-mdd",
-  "version": "0.0.17",
+  "name": "@markdownkit/remark-mdd",
+  "version": "0.0.20",
   "description": "Remark plugins and validation for MDD (Markdown Document) format - semantic document layer for professional business documents",
   "main": "index.js",
   "type": "module",
@@ -44,12 +44,12 @@
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/entro314-labs/remark-mdd.git"
+    "url": "https://github.com/markdown-kit/remark-mdd.git"
   },
   "bugs": {
-    "url": "https://github.com/entro314-labs/remark-mdd/issues"
+    "url": "https://github.com/markdown-kit/remark-mdd/issues"
   },
-  "homepage": "https://github.com/entro314-labs/remark-mdd#readme",
+  "homepage": "https://github.com/markdown-kit/remark-mdd#readme",
   "dependencies": {
     "unist-util-visit": "^5.0.0"
   },
